@@ -34,6 +34,7 @@
 - mitigate manual umount of automounts where possible.
 - fix multiply recursive bind mounts.
 - check kernel module version and require 5.00 or above.
+- fix expire regression introduced in the "mitigate manual umount" patch.
 
 1/9/2006 autofs-5.0.1 rc2
 -------------------------
